--- a/style.css
+++ b/style.css
@@ -117,3 +117,16 @@ h1 {
     padding: 5px 10px;
     border-radius: 5px;
 }
+.image-description {
+    text-align: center;
+    font-size: 1.2em;
+    color: #333;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    font-family: 'Open Sans', sans-serif;
+}
