--- a/third-style.css
+++ b/third-style.css
@@ -77,3 +77,16 @@ body {
     padding-left: 40px;
 }
 
+.image-description {
+    text-align: center;
+    font-size: 1.2em;
+    color: #333;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    font-family: 'Open Sans', sans-serif;
+}
